<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:contentDescription="@string/poster"
        android:scaleType="fitCenter"/>


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@id/iv_poster"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_bold" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/iv_poster"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:maxLines="5"
        android:text="@string/desc"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

</RelativeLayout>